1.0.0~alpha4
- disabled debug

1.0.0~alpha3
- little fixes regarding youtube channels

1.0.0~alpha2
- added youtube channels and search
- added playback

1.0.0~alpha
- initial version for tests